# AI_Engineering_Hands-On

./: .gitignore  README.md
10_AI_Workflow_App/ScriptSprout/backend/: pyproject.toml  test.sh
10_AI_Workflow_App/ScriptSprout/backend/app/: __init__.py  config.py  handlers.py  main.py  rate_limit.py
10_AI_Workflow_App/ScriptSprout/backend/app/api/: deps.py  openai_route_errors.py  query_params.py
10_AI_Workflow_App/ScriptSprout/backend/app/auth/: __init__.py  password.py
10_AI_Workflow_App/ScriptSprout/backend/app/db/: __init__.py  bootstrap.py  deps.py  models.py
10_AI_Workflow_App/ScriptSprout/backend/app/schemas/: __init__.py  admin.py  admin_content.py  admin_generation_runs.py  admin_metrics.py  admin_nlp_query.py  audio_generation.py  auth.py  content.py  errors.py  health.py  meta.py  model_calls.py  openai_smoke.py  search.py  semantic_index.py  story_generation.py  story_parameters.py  synopsis.py  thumbnail_generation.py
10_AI_Workflow_App/ScriptSprout/backend/app/services/: __init__.py  admin_nlp_orchestration.py  audio_generation.py  chroma_store.py  embedding_index.py  missing_field_follow_up.py  openai_client.py  openai_helpers.py  openai_retry.py  responses_smoke.py  semantic_search.py  (+5 more)
10_AI_Workflow_App/ScriptSprout/backend/postman/: README.md
10_AI_Workflow_App/ScriptSprout/backend/tests/: conftest.py  test_admin_cleanse.py  test_admin_content.py  test_admin_generation_runs.py  test_admin_metrics.py  test_admin_nlp_query.py  test_audio_workflow.py  test_audit_events.py  test_auth.py  test_config_security.py  test_content.py  test_content_media.py  test_deps_owned_content.py  test_hardening_edges.py  test_missing_field_follow_up.py  test_model_calls.py  test_nlp_extract.py  test_openai_retry.py  test_openai_route_errors.py  test_openai_smoke.py  test_openapi_contract_sanity.py  test_query_params.py  test_rbac.py  test_routes.py  test_semantic_index_workflow.py  test_semantic_search.py  test_story_guardrails_workflow.py  test_synopsis_workflow.py  test_thumbnail_workflow.py  test_title_description_workflow.py
2_LLM_Demo_App_v2/app/: api.py  embeddings.py  pyproject.toml  search.py  streamlit_app.py
9_AI_Workflows/: .env.example  .gitignore  MODEL_USAGE_GUIDE.md  README.md  pyproject.toml
9_AI_Workflows/src/: __init__.py  api.py  cli.py  config.py  exceptions.py  output_bundle.py  prompts.py  schemas.py  story.py  workflow.py
(+219 files in other folders)
